# pdfcards

./: .gitignore  README.md  pyproject.toml
src/pdfcards/: main.py
