[project]
name = "pdfcards"
version = "0.1.0"
description = ""
authors = [
    {name = "Louis Wendler"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "marker-pdf (>=1.8.4,<2.0.0)",
    "markdown-pdf (>=1.7,<2.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
pdfcards = "pdfcards.main:main"